Fix css to hide collapsed toc

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -232,11 +232,11 @@ a > code {
   color: #333333 !important;
 }
 
-.nav-fold * #TableOfContents ul li ul {
+#TableOfContents ul li ul {
   padding: 0;
 }
 
-.nav-fold * #TableOfContents ul li ul.is-collapsed {
+#TableOfContents ul li ul.is-collapsed {
   display: none;
 }
 
